tests/fixtures/valid/return.py
def _():
    """
    test
    :return:
    """
    return 1

def _():  # Check 2
    a = 1

    return 1

def _():  # Check 3
    a = 1

    """
    Lorem ipsum dolor sit amet
    """
    return 1

def _():  # Check 4
    a = 1

    # Lorem ipsum dolor sit amet
    return 1

def _():  # Check 5
    if 1 == 1:
        return 1
    elif 2 == 2:
        return 1
    else:
        return 1


def _():  # Check 8
    try:
        return 1
    except Exception:
        return 1
